# app/Http/Controllers/UserController.php
@@ -19,13 +19,24 @@ class UserController extends Controller
 
     /**
      * @OA\Get(
-     *     path="/api/users",
-     *     operationId="getUsersList",
-     *     tags={"Users"},
-     *     summary="Get list of users",
-     *     description="Returns a list of users",
-     *     @OA\Response(response=200, description="Successful operation"),
-     *     @OA\Response(response=400, description="Bad request")
+     *      path="/api/users",
+     *      operationId="getUsersList",
+     *      tags={"Users"},
+     *      summary="Get list of users",
+     *      description="Returns list of users",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/User")
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden",
+     *      )
      * )
      */
     
@@ -51,6 +62,57 @@ class UserController extends Controller
             return response()->json([Messages::ERROR_MESSAGE, HttpStatusCodes::INTERNAL_SERVER_ERROR]);
         }
     }
+
+    /**
+     * Create Posts
+     * @OA\Post (
+     *     path="/api/posts/store",
+     *     tags={"ToDo"},
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                      type="object",
+     *                      @OA\Property(
+     *                          property="title",
+     *                          type="string"
+     *                      ),
+     *                      @OA\Property(
+     *                          property="content",
+     *                          type="string"
+     *                      )
+     *                 ),
+     *                 example={
+     *                     "name":"Agostinho",
+     *                     "email":"agostneto6@teste.com",
+     *                     "password":"123456"
+     *                }
+     *             )
+     *         )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="success",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="id", type="number", example=1),
+     *              @OA\Property(property="name", type="string", example="name"),
+     *              @OA\Property(property="email", type="string", example="email"),        
+     *               @OA\Property(property="password", type="string", example="password"),
+     * 
+     *              @OA\Property(property="updated_at", type="string", example="2021-12-11T09:25:53.000000Z"),
+     *              @OA\Property(property="created_at", type="string", example="2021-12-11T09:25:53.000000Z"),
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="invalid",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="msg", type="string", example="fail"),
+     *          )
+     *      )
+     * )
+     */
 
     public function store(StoreUserRequest $request)
     {
